--- a/assets/css/index-custom.css
+++ b/assets/css/index-custom.css
@@ -124,7 +124,7 @@
 }
 
 .share-bar {
-  background-image: url('https://santaeufemia.pt/assets/images/background1.jpg');
+  background-image: url('https://festeiros2005.pt/assets/images/background1.jpg');
   display: flex;
   justify-content: center;
   gap: 20px;
